test/sources/fail/int.ys
meth intfail(): int{
a: int = +05;
    yeet 0;
}